refactor(metadata): fix db mapping
Fixed DB mapping
